[gd_scene load_steps=8 format=3 uid="uid://crailaw4adgcf"]

[ext_resource type="Script" uid="uid://tyq38b1jykwm" path="res://ui/menu_ui.gd" id="1_55kfv"]
[ext_resource type="Shader" uid="uid://bncx3vxo2isgs" path="res://shaders/main_menu_background_gas.gdshader" id="2_2bk46"]
[ext_resource type="Shader" uid="uid://d1p0667iaegjo" path="res://shaders/gleam.gdshader" id="3_2bk46"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2bk46"]
bg_color = Color(0.25531873, 0.16078517, 0.04698901, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2bk46"]
shader = ExtResource("2_2bk46")
shader_parameter/speed = 1.0690000507775
shader_parameter/cloud_scale = 8.8050003944875
shader_parameter/cloud_color = Color(0.02665187, 0.2411448, 2.4065375e-08, 1)
shader_parameter/bg_color = Color(0, 0, 0, 1)
shader_parameter/cloud_alpha = 0.7570000359575
shader_parameter/cutoff = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2ptix"]
shader = ExtResource("2_2bk46")
shader_parameter/speed = 0.2
shader_parameter/cloud_scale = 7.1800003173
shader_parameter/cloud_color = Color(0.2, 0.8, 0.2, 1)
shader_parameter/bg_color = Color(0, 0, 0, 1)
shader_parameter/cloud_alpha = 0.8850000420375
shader_parameter/cutoff = 0.318000015105

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1g3ck"]
shader = ExtResource("3_2bk46")
shader_parameter/silver_color_start = Color(0.9, 0.9, 0.9, 1)
shader_parameter/silver_color_end = Color(0.65, 0.65, 0.65, 1)
shader_parameter/metallic_contrast = 2.0
shader_parameter/gleam_speed = 1.0
shader_parameter/gleam_width = 0.15
shader_parameter/gleam_intensity = 1.4
shader_parameter/gleam_interval = 4.0

[node name="MenuUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_55kfv")

[node name="Background" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GasPanel3" type="Panel" parent="Background"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2bk46")

[node name="GasPanel2" type="Panel" parent="Background"]
material = SubResource("ShaderMaterial_2bk46")
layout_mode = 2

[node name="GasPanel" type="Panel" parent="Background"]
material = SubResource("ShaderMaterial_2ptix")
layout_mode = 2

[node name="MainMenu" type="HBoxContainer" parent="Background"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Background/MainMenu"]
material = SubResource("ShaderMaterial_1g3ck")
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
theme_override_font_sizes/font_size = 100
text = "Title Text"
horizontal_alignment = 1

[node name="MenuButtonContainer" type="VBoxContainer" parent="Background/MainMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_override_constants/separation = 20

[node name="TopSpacer" type="Control" parent="Background/MainMenu/MenuButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="StartButton" type="Button" parent="Background/MainMenu/MenuButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Start"

[node name="SettingsButton" type="Button" parent="Background/MainMenu/MenuButtonContainer"]
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="Background/MainMenu/MenuButtonContainer"]
layout_mode = 2
text = "Credits"

[node name="BotSpacer" type="Control" parent="Background/MainMenu/MenuButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="RightSpacer" type="Control" parent="Background/MainMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
mouse_filter = 2

[node name="SettingsMenu" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -24.5
offset_right = 31.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="SettingsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="SettingsMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SettingsGrid" type="GridContainer" parent="SettingsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="MusicLabel" type="Label" parent="SettingsMenu/MarginContainer/VBoxContainer/SettingsGrid"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="SettingsMenu/MarginContainer/VBoxContainer/SettingsGrid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
value = 100.0

[node name="EffectsLabel" type="Label" parent="SettingsMenu/MarginContainer/VBoxContainer/SettingsGrid"]
layout_mode = 2
text = "Sound Effects"

[node name="EffectsSlider" type="HSlider" parent="SettingsMenu/MarginContainer/VBoxContainer/SettingsGrid"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
value = 100.0

[node name="Spacer2" type="Control" parent="SettingsMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SettingsCloseButton" type="Button" parent="SettingsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="CreditsMenu" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -24.5
offset_right = 31.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CreditsMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsMenu/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CreditsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CreditsMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CreditsMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2

[node name="Label" type="Label" parent="CreditsMenu/MarginContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
text = "These are credits which might kalsdjfl alsdkfj lkasdj fl kasdl fjlkjdasl j aslkd fjlkj"
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="CreditsMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CreditsCloseButton" type="Button" parent="CreditsMenu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[connection signal="gui_input" from="Background/MainMenu" to="." method="_on_main_menu_gui_input"]
[connection signal="pressed" from="Background/MainMenu/MenuButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Background/MainMenu/MenuButtonContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Background/MainMenu/MenuButtonContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="value_changed" from="SettingsMenu/MarginContainer/VBoxContainer/SettingsGrid/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SettingsMenu/MarginContainer/VBoxContainer/SettingsGrid/EffectsSlider" to="." method="_on_effects_slider_value_changed"]
[connection signal="pressed" from="SettingsMenu/MarginContainer/VBoxContainer/SettingsCloseButton" to="." method="_on_settings_close_button_pressed"]
[connection signal="pressed" from="CreditsMenu/MarginContainer/VBoxContainer/CreditsCloseButton" to="." method="_on_credits_close_button_pressed"]
